# scAPAview

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
configs/: example_dengue_day1.yaml  example_pbmc1k.yaml
docs/: biological_use_cases.md  coordinate_systems.md  data_contract.md  scpolaseq_integration.md
src/scapaview/: __init__.py  annotation.py  apa.py  cli.py  coverage.py  genesets.py  io.py  metagene.py  plotting.py  report.py  sashimi.py  tracks.py  transcript_diagram.py
tests/: conftest.py  test_annotation.py  test_apa.py  test_metagene.py  test_real_data_helpers.py  test_tracks.py  test_transcript_diagram.py
tests/data/: toy.gtf  toy_apa_events.tsv  toy_gene_sets.yaml  toy_pas_sites.tsv
