[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scapaview"
version = "0.1.0"
description = "Visualizing alternative polyadenylation from scPolASeq, Sierra Quant and scapture"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scipy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "pyranges>=0.0.129",
    "anndata>=0.9",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "jupyterlab"]
bigwig = ["pyBigWig>=0.3"]

[project.scripts]
scapaview = "scapaview.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
